// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail /> by default should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "hasRoundedCorners": false,
            "imageTitle": undefined,
            "isCircular": false,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid"
            data-testid="responsive-image"
          >
            <Image
              alt="Image Title"
              as="img"
              avatar={false}
              data-testid="responsive-image-img"
              fluid={true}
              onError={[Function]}
              onLoad={[Function]}
              sizes={null}
              src=""
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Title"
                className="ui fluid image"
                data-testid="responsive-image-img"
                onError={[Function]}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isCircular\` is true should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={true}
  isSquare={false}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 is-circular"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={true}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "hasRoundedCorners": false,
            "imageTitle": undefined,
            "isCircular": true,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={true}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid is-circular"
            data-testid="responsive-image"
          >
            <Image
              alt="Image Title"
              as="img"
              avatar={false}
              data-testid="responsive-image-img"
              fluid={true}
              onError={[Function]}
              onLoad={[Function]}
              sizes={null}
              src=""
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Title"
                className="ui fluid image"
                data-testid="responsive-image-img"
                onError={[Function]}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isSquare\` is true should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={true}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 is-square"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={false}
      isLazyLoaded={true}
      isSquare={true}
    >
      <LazyLoader
        componentProps={
          Object {
            "hasRoundedCorners": false,
            "imageTitle": undefined,
            "isCircular": false,
            "isFluid": false,
            "isLazyLoaded": true,
            "isSquare": true,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={false}
          isLazyLoaded={true}
          isSquare={true}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image"
            data-testid="responsive-image"
          >
            <Image
              alt="Image Title"
              as="img"
              avatar={false}
              data-testid="responsive-image-img"
              fluid={true}
              onError={[Function]}
              onLoad={[Function]}
              sizes={null}
              src=""
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Title"
                className="ui fluid image"
                data-testid="responsive-image-img"
                onError={[Function]}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.label\` is supplied should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label="Pods against humanity."
  size={null}
>
  <div
    className="ui thumbnail 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageTitle="Pods against humanity."
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "hasRoundedCorners": false,
            "imageTitle": "Pods against humanity.",
            "isCircular": false,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Pods against humanity."
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid"
            data-testid="responsive-image"
          >
            <Image
              alt="Pods against humanity."
              as="img"
              avatar={false}
              data-testid="responsive-image-img"
              fluid={true}
              onError={[Function]}
              onLoad={[Function]}
              sizes={null}
              src=""
              srcSet={null}
              title="Pods against humanity."
              ui={true}
            >
              <img
                alt="Pods against humanity."
                className="ui fluid image"
                data-testid="responsive-image-img"
                onError={[Function]}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Pods against humanity."
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
  <Paragraph
    className={null}
    isCompact={false}
    size="medium"
    weight={null}
  >
    <p
      className=""
    >
      Pods against humanity.
    </p>
  </Paragraph>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.size\` is supplied should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label={null}
  size="small"
>
  <div
    className="ui thumbnail small 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "hasRoundedCorners": false,
            "imageTitle": undefined,
            "isCircular": false,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid"
            data-testid="responsive-image"
          >
            <Image
              alt="Image Title"
              as="img"
              avatar={false}
              data-testid="responsive-image-img"
              fluid={true}
              onError={[Function]}
              onLoad={[Function]}
              sizes={null}
              src=""
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Title"
                className="ui fluid image"
                data-testid="responsive-image-img"
                onError={[Function]}
                onLoad={[Function]}
                sizes={null}
                src=""
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;
